[gd_scene load_steps=4 format=3 uid="uid://ctpklqdsxa8os"]

[ext_resource type="Script" uid="uid://l3a513ie7lpy" path="res://scenes/core/cardholder.gd" id="1_738vk"]
[ext_resource type="Script" uid="uid://0vrithv6sdky" path="res://scenes/core/hand.gd" id="1_cs774"]
[ext_resource type="PackedScene" uid="uid://bacpgsp8g21i" path="res://scenes/core/cardslot.tscn" id="3_tu18q"]

[node name="root" type="Node2D"]

[node name="main" type="Node2D" parent="."]

[node name="hand" type="Node2D" parent="main"]
script = ExtResource("1_cs774")

[node name="cardslot" parent="main" instance=ExtResource("3_tu18q")]
position = Vector2(604, 56)
scale = Vector2(2, 2)

[node name="cardholder" type="Node2D" parent="main"]
script = ExtResource("1_738vk")

[node name="draw" type="LineEdit" parent="main"]
offset_right = 96.0
offset_bottom = 31.0
placeholder_text = "draw what"

[node name="rng" type="Button" parent="main"]
offset_top = 328.0
offset_right = 96.0
offset_bottom = 360.0
text = "RNG"

[node name="Label" type="Label" parent="main/rng"]
layout_mode = 0
offset_left = 96.0
offset_right = 160.0
offset_bottom = 32.0

[node name="cf" type="Button" parent="main"]
offset_top = 32.0
offset_right = 96.0
offset_bottom = 64.0
text = "coinflip"

[node name="point" type="Node2D" parent="main"]
position = Vector2(574, 306)

[node name="counterup" type="Button" parent="main/point"]
offset_left = 32.0
offset_right = 64.0
offset_bottom = 32.0
text = ">"

[node name="counterdown" type="Button" parent="main/point"]
offset_right = 32.0
offset_bottom = 32.0
text = "<"

[node name="Label" type="Label" parent="main/point"]
offset_top = 32.0
offset_right = 64.0
offset_bottom = 55.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="opppoint" type="Node2D" parent="main"]
position = Vector2(572, 112)

[node name="counterup" type="Button" parent="main/opppoint"]
offset_left = 32.0
offset_right = 64.0
offset_bottom = 32.0
text = ">"

[node name="counterdown" type="Button" parent="main/opppoint"]
offset_right = 32.0
offset_bottom = 32.0
text = "<"

[node name="Label" type="Label" parent="main/opppoint"]
offset_top = 32.0
offset_right = 64.0
offset_bottom = 55.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="text_submitted" from="main/draw" to="main/hand" method="_on_draw_text_submitted"]
[connection signal="pressed" from="main/rng" to="main/hand" method="_on_rng_pressed"]
[connection signal="pressed" from="main/cf" to="main/hand" method="_on_cf_pressed"]
[connection signal="toggled" from="main/cf" to="main/hand" method="_on_cf_toggled"]
[connection signal="pressed" from="main/point/counterup" to="main/hand" method="_on_counterup_pressed"]
[connection signal="pressed" from="main/point/counterdown" to="main/hand" method="_on_counterdown_pressed"]
[connection signal="pressed" from="main/opppoint/counterup" to="main/hand" method="_on_oppcounterup_pressed"]
[connection signal="pressed" from="main/opppoint/counterdown" to="main/hand" method="_on_oppcounterdown_pressed"]
